# src/main/java/com/uditha/autogeneral/api/TodoApi.java
@@ -25,40 +25,31 @@ import io.swagger.annotations.ApiResponses;
 @Api(value = "todo", description = "the todo API")
 public interface TodoApi {
 
-    @ApiOperation(value = "Retrieve a specific item by id", notes = "", response = ToDoItem.class, tags={ "todo", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "OK", response = ToDoItem.class),
-        @ApiResponse(code = 400, message = "Validation error", response = ToDoItemValidationError.class),
-        @ApiResponse(code = 404, message = "Not Found Error", response = ToDoItemNotFoundError.class) })
-    
-    @RequestMapping(value = "/todo/{id}",
-        produces = { "application/json" }, 
-        method = RequestMethod.GET)
-    ResponseEntity<ToDoItem> todoIdGet(@ApiParam(value = "id",required=true ) @PathVariable("id") BigDecimal id);
+	@ApiOperation(value = "Retrieve a specific item by id", notes = "", response = ToDoItem.class, tags = { "todo", })
+	@ApiResponses(value = { @ApiResponse(code = 200, message = "OK", response = ToDoItem.class),
+			@ApiResponse(code = 400, message = "Validation error", response = ToDoItemValidationError.class),
+			@ApiResponse(code = 404, message = "Not Found Error", response = ToDoItemNotFoundError.class) })
 
+	@RequestMapping(value = "/todo/{id}", produces = { "application/json" }, method = RequestMethod.GET)
+	ResponseEntity<ToDoItem> todoIdGet(@ApiParam(value = "id", required = true) @PathVariable("id") BigDecimal id);
 
-    @ApiOperation(value = "Modify an item", notes = "", response = ToDoItem.class, tags={ "todo", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "OK", response = ToDoItem.class),
-        @ApiResponse(code = 400, message = "Validation error", response = ToDoItemValidationError.class),
-        @ApiResponse(code = 404, message = "Not Found Error", response = ToDoItemNotFoundError.class) })
-    
-    @RequestMapping(value = "/todo/{id}",
-        produces = { "application/json" }, 
-        consumes = { "application/json" },
-        method = RequestMethod.PATCH)
-    ResponseEntity<ToDoItem> todoIdPatch(@ApiParam(value = "id",required=true ) @PathVariable("id") BigDecimal id,@ApiParam(value = "" ,required=true )  @Valid @RequestBody ToDoItemUpdateRequest body);
+	@ApiOperation(value = "Modify an item", notes = "", response = ToDoItem.class, tags = { "todo", })
+	@ApiResponses(value = { @ApiResponse(code = 200, message = "OK", response = ToDoItem.class),
+			@ApiResponse(code = 400, message = "Validation error", response = ToDoItemValidationError.class),
+			@ApiResponse(code = 404, message = "Not Found Error", response = ToDoItemNotFoundError.class) })
 
+	@RequestMapping(value = "/todo/{id}", produces = { "application/json" }, consumes = {
+			"application/json" }, method = RequestMethod.PATCH)
+	ResponseEntity<ToDoItem> todoIdPatch(@ApiParam(value = "id", required = true) @PathVariable("id") BigDecimal id,
+			@ApiParam(value = "", required = true) @Valid @RequestBody ToDoItemUpdateRequest body);
 
-    @ApiOperation(value = "Create a to do item", notes = "", response = ToDoItem.class, tags={ "todo", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "OK", response = ToDoItem.class),
-        @ApiResponse(code = 400, message = "Validation error", response = ToDoItemValidationError.class) })
-    
-    @RequestMapping(value = "/todo",
-        produces = { "application/json" }, 
-        consumes = { "application/json" },
-        method = RequestMethod.POST)
-    ResponseEntity<ToDoItem> todoPost(@ApiParam(value = "" ,required=true )  @Valid @RequestBody ToDoItemAddRequest body);
+	@ApiOperation(value = "Create a to do item", notes = "", response = ToDoItem.class, tags = { "todo", })
+	@ApiResponses(value = { @ApiResponse(code = 200, message = "OK", response = ToDoItem.class),
+			@ApiResponse(code = 400, message = "Validation error", response = ToDoItemValidationError.class) })
+
+	@RequestMapping(value = "/todo", produces = { "application/json" }, consumes = {
+			"application/json" }, method = RequestMethod.POST)
+	ResponseEntity<ToDoItem> todoPost(
+			@ApiParam(value = "", required = true) @Valid @RequestBody ToDoItemAddRequest body);
 
 }
